# wecom-ai-agent

./: .gitignore  README.md  docker-compose.yml
backend/: .env  Dockerfile  README.md  alembic.ini  dev.db.bak  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_robot_device_info.py  0003_robot_task_logs.py  0004_message_feedback_tracking.py  0005_robot_task_on_delete_set_null.py  0006_conversation_preview_text.py  0007_message_external_id_per_conv.py  0008_message_media_json.py  0009_task_queue_priority.py  0010_robot_persona_id.py
backend/app/: deps.py  main.py  models.py  schemas.py  worker.py
backend/app/ai/: app_skills.py  app_skills_refine.py  conv_agent.py  personas.py  react_agent.py  react_locators.py  react_playbooks.py  workflow.py
backend/app/core/: config.py  db.py  logging_config.py  security.py  ws_manager.py
backend/app/device/: __init__.py  client.py  protocol.py
backend/app/kb/: chunker.py  entities.py  pipeline.py  retriever.py
backend/app/memory/: summarizer.py
backend/app/routers/: ai.py  auth.py  conversations.py  internal_tasks.py  kb.py  media.py  memory.py  personas.py  robots.py  settings.py  ui_analysis.py
backend/app/services/: auto_reply_scheduler.py  conversation.py  media_store.py  retention.py  send_orchestrator.py  settings_service.py  task_dispatcher.py  task_queue.py
backend/app/ws/: android.py  web.py
backend/tests/: test_auto_reply_scheduler.py  test_conversation_dedupe.py  test_react_agent_helpers.py  test_send_orchestrator.py  test_settings_probe.py  test_task_queue_celery.py  test_workflow_media_messages.py
backend/var/ui_dumps/: robot_6b68852c-20260514T155642Z-UNKNOWN-web_manual.txt  robot_6b68852c-20260514T155659Z-UNKNOWN-web_manual.txt  robot_6b68852c-20260514T155756Z-UNKNOWN-manual.txt  robot_6b68852c-20260514T155904Z-UNKNOWN-web_manual.txt  robot_6b68852c-20260514T155956Z-UNKNOWN-web_manual.txt  robot_6b68852c-20260514T160003Z-CHAT-web_manual.txt  robot_6b68852c-20260514T160124Z-SEARCH-web_manual.txt  robot_6b68852c-20260514T160132Z-UNKNOWN-web_manual.txt  robot_6b68852c-20260514T160905Z-UNKNOWN-web_manual.txt  robot_6b68852c-20260514T161020Z-UNKNOWN-manual.txt  (+4 more)
clip-service/: README.md  pyproject.toml
clip-service/clip_service/: __init__.py  main.py
docs/: README.md  (+15 more)
(+114 files in other folders)
