[project]
name = "wecom-ai-backend"
version = "0.1.0"
description = "WeCom AI Agent — backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "aiosqlite>=0.20",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "websockets>=12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
