[project]
name = "wecom-clip-service"
version = "0.1.0"
description = "Local CLIP / multimodal embedding service for WeCom AI Agent resources"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.46",
    "pydantic>=2.13",
    "einops>=0.8",
    "requests>=2.32",
    "sentence-transformers>=3.4",
    "timm>=1.0",
    "transformers>=4.41,<5",
    "pillow>=11",
    "torch>=2.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clip_service*"]
